Feat: searchbar controller filtering

--- a/Memo/View/OnBoard/OnBoarding.storyboard
+++ b/Memo/View/OnBoard/OnBoarding.storyboard
@@ -12,7 +12,7 @@
         <!--On Boarding View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="OnBoardingViewController" id="Y6W-OH-hqX" customClass="OnBoardingViewController" customModule="Memo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OnBoardingViewController" modalTransitionStyle="flipHorizontal" id="Y6W-OH-hqX" customClass="OnBoardingViewController" customModule="Memo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -64,7 +64,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.39590231788079472" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="placeholderTextColor"/>
                         <constraints>
                             <constraint firstItem="8Xo-Br-vMX" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.747343" id="4L6-Yk-G9O"/>
                             <constraint firstItem="8Xo-Br-vMX" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="fXp-9g-8J6"/>
@@ -84,6 +84,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="placeholderTextColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
